# PrometheusMK4Update1

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  PrometheusCore.hpp
Core/Modules/: GeometryFeatureModule.cpp
Core/Stages/: ArmorMatcher.cpp  ArmorMatcher.hpp  ArmorSelector.cpp  ArmorSelector.hpp  ColorFilter.cpp  ColorFilter.hpp  LightBarDetector.cpp  LightBarDetector.hpp
System/: CMakeLists.txt  Controller.cpp  Controller.hpp  Launcher.cpp
System/Stages/: CuttingChooser.cpp  CuttingChooser.hpp  FPSCounter.cpp  FPSCounter.hpp
